SERVER-84368 Invalidate catalog cache original nss if staleInfo exception is received for timeseries collection (#18004)

SERVER-84368 Invalidate catalog cache original nss if staleInfo
exception is received for timeseries collection

Co-authored-by: Allison Easton <allison.easton@mongodb.com>
(cherry picked from commit b5f58d8cc3853c3bdecba44bf3fdf419fa200cf8)
GitOrigin-RevId: b225e984a0ffc44f048add54e950b3329ecd0b62